--- a/pages/login.html
+++ b/pages/login.html
@@ -16,7 +16,7 @@
         <h2 class="text-2xl font-bold text-center text-gray-700 mb-6">Iniciar sesión</h2>
 
         <!-- Formulario de login -->
-        <form id="loginForm">
+        <form method="POST" id="loginForm">
 
             <!-- Campo de nombre de usuario -->
             <div class="mb-4">
@@ -39,7 +39,7 @@
     </div>
 
     <!-- Incluir el archivo JS -->
-    <script src="js/login.js"></script>
+    <script src="../js/login.js"></script>
 </body>
 </html>
 
