funcionamiento del login

--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
     </section>
   </main>
   <!-- Cargar script externo -->
-  <script src="js/index.js"></script>
+  <script src="js/main.js"></script>
+  <script src="js/auth.js"></script>
 </body>
 </html>
