--- a/login.html
+++ b/login.html
@@ -4,42 +4,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <!-- Incluye el enlace a TailwindCSS desde un CDN -->
+    <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-100 flex items-center justify-center h-screen">
 
-    <!-- Contenedor principal del formulario -->
+    <!-- Contenedor del formulario -->
     <div class="bg-white p-8 rounded-lg shadow-lg w-96">
 
-        <!-- Título del formulario -->
+        <!-- Título -->
         <h2 class="text-2xl font-bold text-center text-gray-700 mb-6">Iniciar sesión</h2>
 
         <!-- Formulario de login -->
-        <form method="POST" id="loginForm">
+        <form id="loginForm" method="POST">
 
-            <!-- Campo de nombre de usuario -->
+            <!-- Email -->
             <div class="mb-4">
-                <label for="username" class="block text-sm font-medium text-gray-600">Nombre de usuario</label>
-                <input type="text" id="username" name="username" required class="w-full px-4 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="Usuario">
+                <label for="email" class="block text-sm font-medium text-gray-600">Email</label>
+                <input type="email" id="email" name="email" required
+                       class="w-full px-4 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
+                       placeholder="tuemail@ejemplo.com">
             </div>
 
-            <!-- Campo de contraseña -->
+            <!-- Contraseña -->
             <div class="mb-6">
-                <label for="password" class="block text-sm font-medium text-gray-600">Contraseña</label>
-                <input type="password" id="password" name="password" required class="w-full px-4 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="Contraseña">
+                <label for="contrasena" class="block text-sm font-medium text-gray-600">Contraseña</label>
+                <input type="password" id="contrasena" name="contrasena" required
+                       class="w-full px-4 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
+                       placeholder="********">
             </div>
 
-            <!-- Botón de login -->
-            <button type="submit" class="w-full py-2 bg-blue-500 text-white rounded-md hover:bg-blue-600 focus:outline-none">Acceder</button>
+            <!-- Botón -->
+            <button type="submit"
+                    class="w-full py-2 bg-blue-500 text-white rounded-md hover:bg-blue-600 focus:outline-none">
+                Acceder
+            </button>
 
+            <!-- Mensaje de error o éxito -->
+            <p id="mensaje" class="mt-4 text-center text-sm text-red-500"></p>
         </form>
-
-
     </div>
 
-    <!-- Incluir el archivo JS -->
-    <script src="../js/login.js"></script>
+    <!-- Archivo JavaScript -->
+    <script src="js/login.js"></script>
 </body>
 </html>
-
