--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
         <button class="w-full text-left text-gray-700 hover:bg-blue-100 px-4 py-2 rounded" onclick="showSection('inicio')">Inicio</button>
         <button class="w-full text-left text-gray-700 hover:bg-blue-100 px-4 py-2 rounded" onclick="showSection('nuevaVenta')">Nueva Venta</button>
         <button class="w-full text-left text-gray-700 hover:bg-blue-100 px-4 py-2 rounded" onclick="showSection('caja')">Caja</button>
-        <button class="w-full text-left text-gray-700 hover:bg-blue-100 px-4 py-2 rounded" onclick="showSection('productos')">Productos</button>
+        <a href="productos.html" class="w-full text-left block bg-white text-gray-700 py-2 px-4 rounded hover:bg-blue-100">
+          Productos
+        </a>
+        
         <button class="w-full text-left text-gray-700 hover:bg-blue-100 px-4 py-2 rounded" onclick="showSection('historial')">Historial</button>
         <button class="w-full text-left text-gray-700 hover:bg-blue-100 px-4 py-2 rounded">Modo Claro/Oscuro</button>
       </nav>
