funcionamiento de caja

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div id="balanceDia" class="text-lg font-bold">Balance: $0</div>
         <div>
           <button class="bg-green-500 hover:bg-green-600 text-white font-semibold py-1 px-3 rounded mr-2"
-            onclick="alert('Registrar nueva venta')">Nueva Venta</button>
+            onclick="showSection('nuevaVenta')">Nueva Venta</button>
           <button class="bg-red-500 hover:bg-red-600 text-white font-semibold py-1 px-3 rounded"
             onclick="alert('Registrar nuevo pago')">Nuevo Pago</button>
         </div>
@@ -111,6 +111,7 @@
     </section>
   </main>
   <!-- Cargar scripts externos -->
+   <script src="js/caja.js"></script>
   <script src="js/ventas.js"></script>
   <script src="js/productos.js"></script>
   <script src="js/main.js"></script>
