Implementar URL base configurable desde config.js y actualizar todas las llamadas a la API

--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
     </section>
   </main>
   <!-- Cargar scripts externos -->
+  <script src="js/config.js"></script>
    <script src="js/caja.js"></script>
   <script src="js/ventas.js"></script>
   <script src="js/productos.js"></script>
