--- a/login.html
+++ b/login.html
@@ -46,6 +46,7 @@
     </div>
 
     <!-- Archivo JavaScript -->
+    <script src="js/config.js"></script>
     <script src="js/login.js"></script>
 </body>
 </html>
