--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Caja Plus - Panel</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <script defer src="js/index.js"></script>
 </head>
 
 <body class="flex h-screen bg-gray-100">
@@ -112,6 +111,8 @@
     </section>
   </main>
   <!-- Cargar scripts externos -->
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> <!-- 📊 Chart.js para los gráficos -->
+  <script src="/js/charts.js"></script>
   <script src="js/config.js"></script>
   <script src="js/caja.js"></script>
   <script src="js/ventas.js"></script>
@@ -119,5 +120,6 @@
   <script src="js/main.js"></script>
   <script src="js/auth.js"></script>
 </body>
+
 
 </html>
