--- a/index.html
+++ b/index.html
@@ -19,17 +19,16 @@
         <button class="w-full text-left text-gray-700 hover:bg-blue-100 px-4 py-2 rounded"
           onclick="showSection('nuevaVenta')">Nueva Venta</button>
         <button class="w-full text-left text-gray-700 hover:bg-blue-100 px-4 py-2 rounded"
+          onclick="showSection('pagos')">Pagos</button>
+        <button class="w-full text-left text-gray-700 hover:bg-blue-100 px-4 py-2 rounded"
           onclick="showSection('caja')">Caja</button>
         <button class="w-full text-left text-gray-700 hover:bg-blue-100 px-4 py-2 rounded"
-          onclick="showSection('productos')">productos</button>
-
+          onclick="showSection('productos')">Productos</button>
         <button class="w-full text-left text-gray-700 hover:bg-blue-100 px-4 py-2 rounded"
           onclick="showSection('historial')">Historial</button>
+        <button class="w-full text-left text-gray-700 hover:bg-blue-100 px-4 py-2 rounded"
+          onclick="showSection('calculadora')">Calculadora de Precios</button>
         <button class="w-full text-left text-gray-700 hover:bg-blue-100 px-4 py-2 rounded">Modo Claro/Oscuro</button>
-        <button class="w-full text-left text-gray-700 hover:bg-blue-100 px-4 py-2 rounded"
-          onclick="showSection('nuevaCompra')">Nueva Compra</button>
-        <button class="w-full text-left text-gray-700 hover:bg-blue-100 px-4 py-2 rounded"
-          onclick="showSection('calculadora')">Calculadora de Precio</button>
 
       </nav>
     </div>
@@ -38,12 +37,6 @@
 
   <!-- Main content -->
   <main class="flex-1 p-6 overflow-auto">
-    <!-- INICIO -->
-    <!-- <section id="inicio">
-      <div id="metricas" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
-
-      </div>
-    </section> -->
 
     <section id="inicio">
       <div class="mb-4 flex gap-4 items-center">
@@ -102,6 +95,65 @@
       <div id="mensaje" class="mt-6 text-center font-medium"></div>
     </section>
 
+    <!-- PAGOS -->
+    <section id="pagos" class="hidden">
+      <h2 class="text-3xl font-bold text-gray-800 mb-6">Registrar Egreso</h2>
+      <div class="max-w-6xl mx-auto bg-white shadow rounded p-6">
+        <form id="formPago" class="space-y-4">
+          <!-- Destinatario -->
+          <div>
+            <label class="block font-medium text-gray-700">Destinatario</label>
+            <input type="text" id="destinatario" class="w-full p-2 border rounded" required />
+          </div>
+
+          <!-- Concepto -->
+          <div>
+            <label class="block font-medium text-gray-700">Concepto</label>
+            <select id="concepto" class="w-full p-2 border rounded" required>
+              <option value="">Seleccionar</option>
+              <option value="alquiler">Alquiler</option>
+              <option value="sueldos">Sueldos</option>
+              <option value="proveedor">Proveedor</option>
+              <option value="servicios">Servicios</option>
+              <option value="otros">Otros</option>
+            </select>
+          </div>
+
+          <!-- Monto -->
+          <div>
+            <label class="block font-medium text-gray-700">Monto ($)</label>
+            <input type="number" id="monto" class="w-full p-2 border rounded" required />
+          </div>
+
+          <!-- Fecha -->
+          <div>
+            <label class="block font-medium text-gray-700">Fecha del Pago</label>
+            <input type="date" id="fecha" class="w-full p-2 border rounded" />
+            <p class="text-sm text-gray-500">Si no se selecciona, se usará la fecha actual.</p>
+          </div>
+
+          <!-- Método de Pago -->
+          <div>
+            <label class="block font-medium text-gray-700">Método de Pago</label>
+            <select id="metodo" class="w-full p-2 border rounded" required>
+              <option value="">Seleccionar</option>
+              <option value="efectivo">Efectivo</option>
+              <option value="transferencia">Transferencia</option>
+            </select>
+          </div>
+
+          <!-- Botones -->
+          <div class="flex justify-end gap-4 pt-4">
+            <button type="button" id="cancelarPago"
+              class="bg-gray-300 hover:bg-gray-400 text-gray-800 px-4 py-2 rounded">Cancelar</button>
+            <button type="submit" class="bg-green-600 hover:bg-green-700 text-white px-4 py-2 rounded">Registrar
+              Pago</button>
+          </div>
+        </form>
+
+      </div>
+      <div id="mensajePago" class="mt-4 text-lg font-semibold text-center"></div>
+    </section>
 
     <!-- CAJA -->
     <section id="caja" class="hidden">
@@ -126,31 +178,6 @@
       <p>Listado de movimientos del día (en construcción)</p>
     </section>
 
-    <!-- NUEVA COMPRA -->
-    <section id="nuevaCompra" class="hidden">
-      <h2 class="text-2xl font-bold text-gray-800 mb-6">Registrar Nueva Compra</h2>
-      <h2 class="text-xl font-semibold text-gray-800 mb-4">Seleccioná los productos a comprar</h2>
-
-      <input id="filtroCompraProductos" type="text" placeholder="Buscar productos..."
-        class="mb-4 p-2 border rounded w-full" />
-      <form id="compraForm" class="flex gap-6 flex-col lg:flex-row">
-        <div id="compraProductosContainer" class="flex flex-wrap gap-4 w-full lg:w-3/4"></div>
-
-        <!-- Derecha: Productos seleccionados -->
-        <div class="w-full lg:w-1/3">
-          <h3 class="text-lg font-semibold mb-2">Productos seleccionados</h3>
-          <div id="compraSeleccionados" class="flex flex-col max-h-[400px] border rounded p-2"></div>
-          <p class="mt-4 text-lg font-bold">Total Compra: $<span id="totalCompraCompra">0</span></p>
-
-          <button type="submit" class="mt-4 bg-blue-500 text-white px-4 py-2 rounded">
-            Confirmar Compra
-          </button>
-        </div>
-      </form>
-
-      <div id="mensajeCompra" class="mt-6 text-center font-medium"></div>
-    </section>
-
     <!-- PRODUCTOS -->
     <section id="productos" class="hidden">
       <h2 class="text-xl font-semibold text-gray-800 mb-4">Productos</h2>
@@ -164,6 +191,7 @@
 
       </div>
     </section>
+
     <!-- CALCULADORA DE PRECIO -->
     <section id="calculadora" class="hidden">
       <h2 class="text-2xl font-bold text-gray-800 mb-6">Calculadora de Precio de Venta</h2>
