--- a/index.html
+++ b/index.html
@@ -39,7 +39,12 @@
   <main class="flex-1 p-6 overflow-auto">
 
     <section id="inicio">
-      <div class="mb-4 flex gap-4 items-center">
+      <h2 class="text-2xl font-bold text-gray-800 mb-6">Dashboard</h2>
+      <div id="metricas" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+        <!-- Tarjetas de métricas principales -->
+      </div>
+
+      <div class="mb-4 flex gap-4 items-center pt-6 ps-2">
         <label for="filtroTiempo" class="font-semibold">Ver por:</label>
         <select id="filtroTiempo" class="p-2 border rounded">
           <option value="diario">Diario</option>
@@ -52,18 +57,14 @@
         </select>
       </div>
 
-      <div id="metricas" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
-        <!-- Tarjetas de métricas principales -->
-      </div>
-
       <div id="graficosDashboard" class="mt-8 grid grid-cols-1 lg:grid-cols-2 gap-6">
         <div class="bg-white shadow rounded p-4">
           <h4 class="text-lg font-semibold mb-2">Gráfico de Ventas</h4>
-          <canvas id="ventasChart" height="180"></canvas>
+          <canvas id="ventasChart" height="200"></canvas>
         </div>
-        <div class="bg-white shadow rounded p-4">
+        <div class="bg-white shadow rounded p-4 w-full">
           <h4 class="text-lg font-semibold mb-2">Ingresos vs Egresos</h4>
-          <canvas id="ingresosEgresosChart" height="180"></canvas>
+          <canvas id="ingresosEgresosChart" height="200"></canvas>
         </div>
       </div>
     </section>
@@ -103,7 +104,7 @@
           <!-- Destinatario -->
           <div>
             <label class="block font-medium text-gray-700">Destinatario</label>
-            <input type="text" id="destinatario" class="w-full p-2 border rounded"/>
+            <input type="text" id="destinatario" class="w-full p-2 border rounded" />
           </div>
 
           <!-- Concepto -->
@@ -128,7 +129,7 @@
           <!-- Monto -->
           <div>
             <label class="block font-medium text-gray-700">Monto ($)</label>
-            <input type="number" id="monto" class="w-full p-2 border rounded"/>
+            <input type="number" id="monto" class="w-full p-2 border rounded" />
           </div>
 
           <!-- Fecha -->
@@ -150,7 +151,8 @@
 
           <!-- Botones -->
           <div class="flex justify-end gap-4 pt-4 justify-center">
-            <button type="reset" class="bg-red-600 hover:bg-red-700 text-white text-xl px-6 py-2 rounded">Cancelar</button>
+            <button type="reset"
+              class="bg-red-600 hover:bg-red-700 text-white text-xl px-6 py-2 rounded">Cancelar</button>
             <button type="submit" class="bg-green-600 hover:bg-green-700 text-white text-xl px-6 py-2 rounded">Registrar
               Pago</button>
           </div>
