--- a/index.html
+++ b/index.html
@@ -46,23 +46,23 @@
 
       <div class="mb-4 flex gap-4 items-center pt-6 ps-2">
         <label for="filtroTiempo" class="font-semibold">Ver por:</label>
-        <select id="filtroTiempo" class="p-2 border rounded">
+        <select id="filtroTiempo" class="p-2 border rounded-lg">
           <option value="diario">Diario</option>
           <option value="semanal">Semanal</option>
           <option value="mensual">Mensual</option>
           <option value="anual">Anual</option>
         </select>
 
-        <select id="filtroRango" class="p-2 border rounded">
+        <select id="filtroRango" class="p-2 border rounded-lg">
         </select>
       </div>
 
-      <div id="graficosDashboard" class="mt-8 grid grid-cols-1 lg:grid-cols-2 gap-6">
-        <div class="bg-white shadow rounded p-4">
+      <div id="graficosDashboard" class="mt-8 grid grid-cols-1 lg:grid-cols-3 gap-6">
+        <div class="bg-white shadow rounded p-4 col-span-2 ">
           <h4 class="text-lg font-semibold mb-2">Gráfico de Ventas</h4>
-          <canvas id="ventasChart" height="200"></canvas>
+          <canvas id="ventasChart" height="150"></canvas>
         </div>
-        <div class="bg-white shadow rounded p-4 w-full">
+        <div class="bg-white shadow rounded p-4 ">
           <h4 class="text-lg font-semibold mb-2">Ingresos vs Egresos</h4>
           <canvas id="ingresosEgresosChart" height="200"></canvas>
         </div>
