arreglo modo oscuro

--- a/index.html
+++ b/index.html
@@ -185,8 +185,8 @@
     </div>
   </div>
   <div class="mb-4">
-    <label class="mr-2 font-semibold dark:text-white">Filtrar por:</label>
-    <select id="filtroCaja" class="border border-gray-300 rounded p-1">
+    <label class="mr-2 font-semibold dark:text-white ">Filtrar por:</label>
+    <select id="filtroCaja" class="border border-gray-300 rounded p-1 dark:bg-gray-700 dark:text-white">
       <option value="todos">Todos</option>
       <option value="ventas">Ventas</option>
       <option value="pagos">Pagos</option>
