arreglo modo oscuro finalizado

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
   <h2 class="text-xl font-semibold text-gray-800 dark:text-white mb-4">Seleccioná los productos</h2>
 
   <input id="filtroProductos" type="text" placeholder="Buscar productos..."
-    class="mb-4 p-2 border rounded w-full" />
+    class="mb-4 p-2 border rounded w-full dark:bg-gray-700 dark:text-white" />
 
   <form id="ventaForm" class="flex gap-6 flex-col lg:flex-row">
     <div id="productosContainer" class="flex flex-wrap gap-4 w-full lg:w-3/4"></div>
@@ -201,7 +201,7 @@
   <h2 class="text-xl font-semibold text-gray-800 dark:text-white mb-4">Seleccioná los productos a comprar</h2>
 
   <input id="filtroCompraProductos" type="text" placeholder="Buscar productos..."
-    class="mb-4 p-2 border rounded w-full" />
+    class="mb-4 p-2 border rounded w-full dark:bg-gray-700 dark:text-white" />
 
   <form id="compraForm" class="flex gap-6 flex-col lg:flex-row">
     <div id="compraProductosContainer" class="flex flex-wrap gap-4 w-full lg:w-3/4"></div>
@@ -226,7 +226,7 @@
   <h2 class="text-xl font-semibold text-gray-800 dark:text-white mb-4">Listado de Productos</h2>
   <div class="mb-4">
     <input type="text" id="filtroProductos" placeholder="Buscar productos..."
-      class="w-full p-2 border border-gray-300 rounded">
+      class="w-full p-2 border border-gray-300 rounded dark:bg-gray-700 dark:text-white" />
   </div>
   <div id="contenedorProductos" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4"></div>
 </section>
